--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -16,81 +16,89 @@
 			</div>
 			<div class="col-lg-6">
 				{% for page in cryptography_pages %}
-					<div class="d-flex flex-column border-bottom mb-3 pb-3">
-						<div>
-							<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+					{% if page.id == cryptography_pages|last.id %}
+						<div class="d-flex flex-column pb-3 pt-3">
+						{% else %}
+							<div class="d-flex flex-column border-bottom pb-3 pt-3">
+							{% endif %}
+							<div>
+								<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+							</div>
+							<div>
+								<p class="lead">{{ page.introduction }}</p>
+							</div>
 						</div>
-						<div>
-							<p class="lead">{{ page.introduction }}</p>
-						</div>
+					{% endfor %}
+				</div>
+			</div>
+			<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+				<div class="col-lg-6">
+					{% for page in math_pages %}
+						{% if page.id == math_pages|last.id %}
+							<div class="d-flex flex-column pb-3 pt-3">
+							{% else %}
+								<div class="d-flex flex-column border-bottom pb-3 pt-3">
+								{% endif %}
+								<div>
+									<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+								</div>
+								<div>
+									<p class="lead">{{ page.introduction }}</p>
+								</div>
+							</div>
+						{% endfor %}
 					</div>
-				{% endfor %}
-			</div>
-		</div>
-		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-			<div class="col-lg-6">
-				{% for page in math_pages %}
-					<div class="d-flex flex-column border-bottom mb-3 pb-3">
-						<div>
-							<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
-						</div>
-						<div>
-							<p class="lead">{{ page.introduction }}</p>
-						</div>
+					<div class="col-lg-6">
+						<h1 class="display-2">Impara la matematica che c'è dietro</h1>
 					</div>
-				{% endfor %}
-			</div>
-			<div class="col-lg-6">
-				<h1 class="display-2">Impara la matematica che c'è dietro</h1>
-			</div>
-		</div>
-		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-			{% for page in pages %}
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<div class="card rounded-lg my-2">
-						<div class="card-body">
-							<a class="text-dark  stretched-link" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+				</div>
+				<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+					{% for page in pages %}
+						<div class="col-lg-3 col-md-4 col-sm-6">
+							<div class="card rounded-lg my-2">
+								<div class="card-body">
+									<a class="text-dark  stretched-link" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+								</div>
+							</div>
+						</div>
+					{% endfor %}
+				</div>
+				<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+					<div class="col">
+						<div class="card shadow-sm">
+							<div class="card-body">
+								<blockquote class="blockquote mb-0">
+									<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
+									<footer class="blockquote-footer">Auguste Kerckhoffs
+									</footer>
+								</blockquote>
+							</div>
 						</div>
 					</div>
 				</div>
-			{% endfor %}
-		</div>
-		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-			<div class="col">
-				<div class="card shadow-sm">
-					<div class="card-body">
-						<blockquote class="blockquote mb-0">
-							<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
-							<footer class="blockquote-footer">Auguste Kerckhoffs
-							</footer>
-						</blockquote>
-					</div>
-				</div>
-			</div>
-		</div>
-		{% if is_granted('ROLE_ADMIN') %}
-			<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 mb-5 border-top border-dark">
-				<div class="col">
-					{{ form_start(page_form) }}
-					<div class="form-row">
-						<div class="form-group mb-0 mt-2 col">
-							{{ form_widget(page_form.title) }}
-						</div>
-						<small>{{ form_help(page_form) }}</small>
-						<div class="form-error">
-							{{ form_errors(page_form) }}
-						</div>
-					</div>
-					<button type="submit" class="btn btn-primary btn-sm  btn-block mt-1">
-						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-						</svg>
-					</button>
-					{{ form_rest(page_form) }}
-					{{ form_end(page_form) }}
+				{% if is_granted('ROLE_ADMIN') %}
+					<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 mb-5 border-top border-dark">
+						<div class="col">
+							{{ form_start(page_form) }}
+							<div class="form-row">
+								<div class="form-group mb-0 mt-2 col">
+									{{ form_widget(page_form.title) }}
+								</div>
+								<small>{{ form_help(page_form) }}</small>
+								<div class="form-error">
+									{{ form_errors(page_form) }}
+								</div>
+							</div>
+							<button type="submit" class="btn btn-primary btn-sm  btn-block mt-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+									<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+								</svg>
+							</button>
+							{{ form_rest(page_form) }}
+							{{ form_end(page_form) }}
 
-				</div>
+						</div>
+					</div>
+				{% endif %}
 			</div>
-		{% endif %}
-	</div>
-{% endblock %}
+		{% endblock %}
