--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -81,8 +81,14 @@
 						<div class="col">
 							{{ form_start(page_form) }}
 							<div class="form-row">
-								<div class="form-group mb-0 mt-2 col">
+								<div class="form-group mb-0 col-12">
 									{{ form_widget(page_form.title) }}
+								</div>
+								<div class="form-group mb-0 mt-1 col-12">
+									{{ form_widget(page_form.introduction) }}
+								</div>
+								<div class="form-group mb-0 mt-1 col-12">
+									{{ form_widget(page_form.category) }}
 								</div>
 								<small>{{ form_help(page_form) }}</small>
 								<div class="form-error">
