--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -17,7 +17,7 @@
 					{% endif %}
 				</div>
 				<div class="row justify-content-between">
-					{% if not page.introduction is empty %}
+					{% if not page.introduction is null %}
 						<div class="col-md-9">
 							<p class="mt-1">
 								{{ page.introduction }}
