--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -52,6 +52,14 @@
 						<h1 class="display-2">Impara la matematica che c'è dietro</h1>
 					</div>
 				</div>
+				<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+					<div class="col-lg-6">
+						<img src="{{ asset("/image/Alan Turing.jpg") }}" alt="Immagine non presente" class="rounded mx-auto d-block"/>
+					</div>
+					<div class="col-lg-6">
+						<h1 class="display-2">Alan Turing</h1>
+					</div>
+				</div>
 				<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
 					{% for page in pages %}
 						<div class="col-lg-3 col-md-4 col-sm-6">
