tab in code textarea

--- a/templates/main/page.html.twig
+++ b/templates/main/page.html.twig
@@ -4,3 +4,7 @@
 	{% include 'main/page/content.html.twig' %}
 	{% include 'main/page/comments.html.twig' %}
 {% endblock %}
+
+{% block script %}
+	<script type="text/javascript" src="{{ asset('js/tab.js') }}"></script>
+{% endblock %}
