visualizzazione corretta del codice

--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -61,7 +61,7 @@
 						{% if block.type == 'code' %}
 							<div class="col">
 								<p>
-									<pre class="my-0">{{ block.content }}</pre>
+									<pre class="my-0 border-0 prettyprint">{{ block.content }}</pre>
 								</p>
 							</div>
 						{% endif %}
