--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<div class="container">
-		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5">
+		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 mb-5 pb-5">
 			<div class="col">
 				<h1 class="display-1">
 					<strong>Benvenuto nella Wiki</strong>
@@ -18,9 +18,6 @@
 				{% for page in cryptography_pages %}
 					{% if page.id == cryptography_pages|last.id %}
 						<div class="d-flex flex-column pb-3 pt-3">
-						{% else %}
-							<div class="d-flex flex-column border-bottom pb-3 pt-3">
-							{% endif %}
 							<div>
 								<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
 							</div>
@@ -28,60 +25,75 @@
 								<p class="lead">{{ page.introduction }}</p>
 							</div>
 						</div>
-					{% endfor %}
-				</div>
+					{% else %}
+						<div class="d-flex flex-column border-bottom pb-3 pt-3">
+							<div>
+								<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+							</div>
+							<div>
+								<p class="lead">{{ page.introduction }}</p>
+							</div>
+						</div>
+					{% endif %}
+				{% endfor %}
 			</div>
-			<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-				<div class="col-lg-6">
-					{% for page in math_pages %}
-						{% if page.id == math_pages|last.id %}
-							<div class="d-flex flex-column pb-3 pt-3">
-							{% else %}
-								<div class="d-flex flex-column border-bottom pb-3 pt-3">
-								{% endif %}
-								<div>
-									<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
-								</div>
-								<div>
-									<p class="lead">{{ page.introduction }}</p>
-								</div>
+		</div>
+		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			<div class="col-lg-6">
+				{% for page in math_pages %}
+					{% if page.id == math_pages|last.id %}
+						<div class="d-flex flex-column pb-3 pt-3">
+							<div>
+								<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
 							</div>
-						{% endfor %}
-					</div>
-					<div class="col-lg-6">
-						<h1 class="display-2">Impara la matematica che c'è dietro</h1>
-					</div>
-				</div>
-				<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-					<div class="col-lg-6">
-						<img src="{{ asset("/image/Alan Turing.jpg") }}" alt="Immagine non presente" class="rounded mx-auto d-block"/>
-					</div>
-					<div class="col-lg-6">
-						<h1 class="display-2">Alan Turing</h1>
-					</div>
-				</div>
-				<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-					{% for page in pages %}
-						<div class="col-lg-3 col-md-4 col-sm-6">
-							<div class="card rounded-lg my-2">
-								<div class="card-body">
-									<a class="text-dark  stretched-link" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
-								</div>
+							<div>
+								<p class="lead">{{ page.introduction }}</p>
 							</div>
 						</div>
-					{% endfor %}
-				</div>
-				<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-					<div class="col">
-						<div class="card shadow-sm">
-							<div class="card-body">
-								<blockquote class="blockquote mb-0">
-									<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
-									<footer class="blockquote-footer">Auguste Kerckhoffs
-									</footer>
-								</blockquote>
+					{% else %}
+						<div class="d-flex flex-column border-bottom pb-3 pt-3">
+							<div>
+								<a class="text-dark h1" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+							</div>
+							<div>
+								<p class="lead">{{ page.introduction }}</p>
 							</div>
 						</div>
+					{% endif %}
+				{% endfor %}
+			</div>
+			<div class="col-lg-6">
+				<h1 class="display-2">Impara la matematica che c'è dietro</h1>
+			</div>
+		</div>
+		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			<div class="col-lg-6">
+				<img src="{{ asset("/image/Alan Turing.jpg") }}" alt="Immagine non presente" class="rounded mx-auto d-block"/>
+			</div>
+			<div class="col-lg-6">
+				<h1 class="display-2">Alan Turing</h1>
+			</div>
+		</div>
+		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			{% for page in pages %}
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<div class="card rounded-lg my-2">
+						<div class="card-body">
+							<a class="text-dark  stretched-link" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+						</div>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			<div class="col">
+				<div class="card shadow-sm">
+					<div class="card-body">
+						<blockquote class="blockquote mb-0">
+							<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
+							<footer class="blockquote-footer">Auguste Kerckhoffs
+							</footer>
+						</blockquote>
 					</div>
 				</div>
 			</div>
