modifiche presentation-layer

--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -7,7 +7,9 @@
 				<h1 class="display-1">
 					<strong>Benvenuto nella Wiki</strong>
 				</h1>
-				<p class="lead">Qui può trovare tutto quello che c'è da sapere sulla crittografia</p>
+				<h1 class="display-4 mt-5">
+					Qui può trovare tutto quello che c'è da sapere sulla crittografia
+				</h1>
 			</div>
 		</div>
 		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
@@ -75,6 +77,11 @@
 			</div>
 		</div>
 		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			<div class="col-12 mb-3">
+				<h1>
+					Ecco tutte le pagine della Wiki
+				</h1>
+			</div>
 			{% for page in pages %}
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<div class="card rounded-lg my-2">
