--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -76,6 +76,9 @@
 				<h1 class="display-2">Alan Turing</h1>
 			</div>
 		</div>
+		<!-- 
+			BLOCCO ELENCO PAGINE WIKI
+		-->
 		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
 			<div class="col-12 mb-3">
 				<h1>
@@ -92,6 +95,10 @@
 				</div>
 			{% endfor %}
 		</div>
+		
+		<!--
+			BLOCCO CITAZIONE
+		-->
 		<div class="row mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
 			<div class="col">
 				<div class="card shadow-sm">
