--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,10 @@
 
 		</head>
 		<body onload="load()">
+
+			<!-------------------
+				BLOCCO NAVBAR
+			-------------------->
 			<div id="id_navbar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
 				<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
@@ -40,6 +44,9 @@
 
 			{% block body %}{% endblock %}
 
+			<!------------------
+				BLOCCO FOOTER
+			-------------------->
 			<div class="container-sm">
 				<footer class="pt-4 mt-4 border-top">
 					<div class="row">
