--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -2,6 +2,10 @@
 	<div class="card shadow">
 		<div class="card-body">
 			<div class="container m-0 p-0">
+
+				<!------------------------------------
+					BLOCCO TITOLO E IL SUO EDITING
+				------------------------------------->
 				<div class="row align-items-center">
 					<div class="col">
 						<h1 class="card-title text-center display-4">{{ page.title }}</h1>
@@ -16,6 +20,10 @@
 						</div>
 					{% endif %}
 				</div>
+
+				<!-----------------------------------
+					BLOCCO INTRODUZIONE E INDICE
+				------------------------------------>
 				<div class="row justify-content-between">
 					{% if not page.introduction is null %}
 						<div class="col-md-9">
@@ -39,6 +47,10 @@
 						</div>
 					{% endif %}
 				</div>
+
+				<!-------------------------
+					BLOCCHI DELLA WIKI
+				-------------------------->
 				{% for block in blocks %}
 					<div class="row align-items-center mt-1">
 						{% if block.type == 'title' %}
@@ -65,6 +77,10 @@
 								</p>
 							</div>
 						{% endif %}
+
+						<!-------------------------------------------------
+							PARTE MODIFICA BLOCCHI RISERVATA ALL'ADMIN
+						-------------------------------------------------->
 						{% if is_granted('ROLE_ADMIN') %}
 							<div class="col-auto text-right">
 								<span class="badge badge-pill badge-primary pr-2">{{ block.position }}</span>
@@ -101,6 +117,10 @@
 					</div>
 				{% endfor %}
 			</div>
+
+			<!-------------------------------------------------
+				PARTE CREAZIONE BLOCCHI RISERVATA ALL'ADMIN
+			-------------------------------------------------->
 			{% if is_granted('ROLE_ADMIN') %}
 				<p class="text-right mb-0">
 					<a class="btn btn-primary btn-sm" data-toggle="collapse" href="#title" role="button">
