--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -1,8 +1,7 @@
 <div class="container">
 	<div class="card shadow">
 		<div class="card-body">
-			<div
-				class="container m-0 p-0">
+			<div class="container m-0 p-0">
 
 				{# BLOCCO TITOLO E IL SUO EDITING #}
 				<div class="row align-items-center">
