--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -61,8 +61,22 @@
 			</div>
 		</div>
 
+		{# BLOCCO ALAN TURING #}
+		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			<div class="col-lg-6">
+				<img src="{{ asset("/image/Alan Turing.jpg") }}" alt="Immagine non presente" class="rounded mx-auto d-block"/>
+			</div>
+			<div class="col-lg-6">
+				<a class="text-dark h1 display-2" href="{{ path('wiki_page', {'id': turing_page.id}) }}">{{ turing_page.title }}</a>
+				<p class="lead">{{ turing_page.introduction }}</p>
+			</div>
+		</div>
+
 		{# BLOCCO MATEMATICA #}
 		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
+			<div class="col-lg-6">
+				<h1 class="display-2">Impara la matematica che c'è dietro</h1>
+			</div>
 			<div class="col-lg-6">
 				{% for page in math_pages %}
 					{% if page.id == math_pages|last.id %}
@@ -85,19 +99,6 @@
 						</div>
 					{% endif %}
 				{% endfor %}
-			</div>
-			<div class="col-lg-6">
-				<h1 class="display-2">Impara la matematica che c'è dietro</h1>
-			</div>
-		</div>
-
-		{# BLOCCO ALAN TURING #}
-		<div class="row align-items-center mx-lg-3 mx-md-2 mx-sm-1 mt-5 pt-5 border-top border-dark">
-			<div class="col-lg-6">
-				<h1 class="display-2">Alan Turing</h1>
-			</div>
-			<div class="col-lg-6">
-				<img src="{{ asset("/image/Alan Turing.jpg") }}" alt="Immagine non presente" class="rounded mx-auto d-block"/>
 			</div>
 		</div>
 
