--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -2,7 +2,6 @@
   <div class="card shadow">
     <div class="card-body">
       <div class="container m-0 p-0">
-
         {# BLOCCO TITOLO E IL SUO EDITING #}
         <div class="row align-items-center">
           <div class="col">
@@ -46,10 +45,13 @@
 
         {# BLOCCHI DELLA WIKI #}
         {% for block in blocks %}
+          {% if block.type == 'title' %}
+            <hr class="mt-3" id="{{ block.content }}">
+          {% endif %}
           <div class="row mt-1">
             {% if block.type == 'title' %}
-              <div class="col border-top mt-3 pt-3" id="{{ block.content }}">
-                <h4 class="">
+              <div class="col">
+                <h4>
                   {{ block.content }}
                 </h4>
               </div>
@@ -75,47 +77,35 @@
             {# PARTE MODIFICA BLOCCHI RISERVATA ALL'ADMIN #}
             {% if is_granted('ROLE_ADMIN') %}
               <div class="col-auto">
-                <div class="d-flex flex-column">
-                  <div class="d-flex justify-content-center mb-1">
-                    <span class="badge badge-pill badge-primary pr-2">{{ block.position }}</span>
-                  </div>
-                  {% if block.type == 'image' %}
-                    {% if block.position > 1 %}
-                      <div class="d-flex justify-content-center mb-1">
-                        <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_up', {'id_block': block.id}) }}" role="button">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill mt-n1" viewbox="0 0 16 16">
-                            <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"></path>
-                          </svg>
-                        </a>
-                      </div>
-                    {% endif %}
-                    {% if block.position < blocks | last.position %}
-                      <div class="d-flex justify-content-center mb-1">
-                        <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_down', {'id_block': block.id}) }}" role="button">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill mt-n1" viewbox="0 0 16 16">
-                            <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"></path>
-                          </svg>
-                        </a>
-                      </div>
-                    {% endif %}
-                  {% endif %}
-                  {% if block.type != 'image' %}
-                    <div class="d-flex justify-content-center mb-1">
-                      <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_edit', {'id_block': block.id}) }}" role="button">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill mt-n1" viewbox="0 0 16 16">
-                          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"></path>
-                        </svg>
-                      </a>
-                    </div>
-                  {% endif %}
-                  <div class="d-flex justify-content-center mb-3">
-                    <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_delete', {'id_block': block.id}) }}" role="button">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
+                <span class="badge badge-pill badge-primary pr-2">{{ block.position }}</span>
+                {% if block.type == 'image' %}
+                  {% if block.position > 1 %}
+                    <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_up', {'id_block': block.id}) }}" role="button">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill mt-n1" viewbox="0 0 16 16">
+                        <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"></path>
                       </svg>
                     </a>
-                  </div>
-                </div>
+                  {% endif %}
+                  {% if block.position < blocks | last.position %}
+                    <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_move_down', {'id_block': block.id}) }}" role="button">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill mt-n1" viewbox="0 0 16 16">
+                        <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"></path>
+                      </svg>
+                    </a>
+                  {% endif %}
+                {% endif %}
+                {% if block.type != 'image' %}
+                  <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_edit', {'id_block': block.id}) }}" role="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill mt-n1" viewbox="0 0 16 16">
+                      <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"></path>
+                    </svg>
+                  </a>
+                {% endif %}
+                <a class="btn btn-primary btn-sm" href="{{ path('wiki_block_delete', {'id_block': block.id}) }}" role="button">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
+                  </svg>
+                </a>
               </div>
             {% endif %}
           </div>
