--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,57 +1,60 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<link rel="shortcut icon" href="{{ asset('favicon.ico')}}"/>
+    <link rel="shortcut icon" href="{{ asset('favicon.ico')}}"/>
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-		<title>The Cryptography's Wiki</title>
+    <title>The Cryptography's Wiki</title>
 
-		<link rel="stylesheet" href="{{ asset('css/main.css') }}"> {% block style %}{% endblock %}
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+    {% block style %}{% endblock %}
 
-		</head>
-		<body
-			onload="load()">
+  </head>
+  <body onload="load()">
+    {# BLOCCO NAVBAR #}
+    <div id="id_navbar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
+      <h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
-			{# BLOCCO NAVBAR #}
-			<div id="id_navbar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
-				<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        {% if (app.request.pathinfo == '/') and is_granted('ROLE_ADMIN')%}
+          <a class="p-2 text-dark" href="{{ path('wiki_page_create') }}">Create page</a>
+        {% endif %}
+        {% if app.request.pathinfo != '/' %}
+          <a class="p-2 text-dark" href="{{ path('wiki_home') }}">Home</a>
+        {% endif %}
 
-				<nav class="my-2 my-md-0 mr-md-3">
-					{% if (app.request.pathinfo == '/') and is_granted('ROLE_ADMIN')%}
-						<a class="p-2 text-dark" href="{{ path('wiki_page_create') }}">Create page</a>
-					{% endif %}
-					{% if app.request.pathinfo != '/' %}
-						<a class="p-2 text-dark" href="{{ path('wiki_home') }}">Home</a>
-					{% endif %}
+        {% if (app.user == false) 
+          and app.request.pathinfo != '/login' %}
+          <a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
+        {% endif %}
+        {% if (app.user == false) 
+          and app.request.pathinfo != '/register' %}
+          <a class="btn btn-primary" href="{{ path('app_register') }}">Sign up</a>
+        {% endif %}
 
-					{% if (app.user == false) and app.request.pathinfo != '/login' %}
-						<a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
-					{% endif %}
-					{% if (app.user == false) and app.request.pathinfo != '/register' %}
-						<a class="btn btn-primary" href="{{ path('app_register') }}">Sign up</a>
-					{% endif %}
+        {% if app.user %}
+          <a class="btn btn-outline-primary" href="{{ path('app_logout') }}">Logout</a>
+        {% endif %}
+      </nav>
+    </div>
 
-					{% if app.user %}
-						<a class="btn btn-outline-primary" href="{{ path('app_logout') }}">Logout</a>
-					{% endif %}
-				</nav>
-			</div>
+    <div class="m-0 p-0 mb-5">
+      {% block body %}{% endblock %}
+    </div>
 
-			<div class="m-0 p-0 mb-5">{% block body %}{% endblock %}</div>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" id="MathJax-script" async="async" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <script type="text/javascript" src="{{ asset('js/default.js') }}"></script>
 
-			<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-			<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-			<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
-			<script type="text/javascript" src="{{ asset('js/default.js') }}"></script>
+    {% block script %}{% endblock %}
 
-			{% block script %}{% endblock %}
-
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-		</body>
-	</html>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+  </body>
+</html>
